tests/baselines/reference/nonIterableRestElement3.errors.txt
tests/cases/conformance/es6/destructuring/nonIterableRestElement3.ts(2,5): error TS2322: Type '(string | number)[]' is not assignable to type '{ bogus: number; }'.
  Property 'bogus' is missing in type '(string | number)[]'.


==== tests/cases/conformance/es6/destructuring/nonIterableRestElement3.ts (1 errors) ====
    var c = { bogus: 0 };
    [...c] = ["", 0];
        ~
!!! error TS2322: Type '(string | number)[]' is not assignable to type '{ bogus: number; }'.
!!! error TS2322:   Property 'bogus' is missing in type '(string | number)[]'.